# Molly

./: .env.example  .gitignore  README.md  assistant_workflow.py  bot.py  calendar_client.py  calendar_import.py  calendar_repository.py  calendar_sync.py  clarification_state.py  commands.py  config.json  config.py  email_extraction.py  gmail_adapter.py  gmail_client.py  gmail_confirmation.py  google_calendar_backend.py  implementation_plan.md  inbox_processor.py  intent_adapter.py  intent_models.py  local_calendar_backend.py  molly_core.py  molly_core_requests.py  openclaw_molly_bridge.py  openclaw_telegram_provider.py  pyproject.toml  requirements.txt  run.bat  scheduler.py  spouse_notifications.py  state_store.py  telegram_extraction.py  telegram_extractor_provider.py  telegram_nlu.py  utils.py
data/: molly_state.db
docs/: dual_agent_architecture_en.md  dual_agent_architecture_ko.md  gmail_intake_allowlist_en.md  gmail_intake_allowlist_ko.md  google_sync_stage1_ko.md  google_sync_update_delete_plan_ko.md  google_sync_worker_runtime_ko.md  google_to_local_import_en.md  google_to_local_import_ko.md  jeeyoung_verification_latest.md  local_first_mvp_en.md  local_first_mvp_ko.md  local_first_transition_en.md  local_first_transition_ko.md  local_repository_cleanup_en.md  local_repository_cleanup_ko.md  molly_core_plan_en.md  molly_core_plan_ko.md  molly_target_architecture_v2_ko.md  openclaw_centered_architecture_en.md  openclaw_centered_architecture_ko.md  openclaw_cli_bridge_en.md  openclaw_cli_bridge_ko.md  openclaw_exec_tool_strategy_en.md  phase_log.md  roadmap_en.md  (+15 more)
(+58 files in other folders)
